all collapse fixed

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -30,11 +30,10 @@
           font-size: 12px;
         }
         & .titleCollapse {
-          font-size: 13px;
-          padding: 10px 0px 10px 10px;
+          font-size: 13px;          
           & .crochet {
             width: 20px;
-            margin-right: 10px;
+            
           }
         }
       }
